# rust-gfx-test

./: .gitignore  Cargo.toml  README.md
rts/: Cargo.toml
rts-lib/: Cargo.toml  build.rs
rts-lib/src/: camera.rs  config.rs  input.rs  instance.rs  lib.rs  model.rs  texture.rs
rts-lib/src/shader/: main.frag  proc.frag  proc.vert
rts/assets/materials/: terrain_flat_green.pbrmaterial  terrain_materials.terrainconfig  terrain_metal.pbrmaterial
rts/assets/materials/terrain/: basic_tile.pbrmaterial  black_plastic.pbrmaterial  blue_metal.pbrmaterial  curly_tile.pbrmaterial  diamond-inlay-tile.pbrmaterial  diamond_inlay_tile.pbrmaterial  flat_blue.pbrmaterial  flat_red.pbrmaterial  metal.pbrmaterial  old_bronze.pbrmaterial  round-pattern-wallpaper.pbrmaterial  round_tile.pbrmaterial  simple_tile.pbrmaterial
rts/assets/tiles/: base.tileset  bronze_statue.tile  building.tile  extra.tileset  main.tilesets  tree.tile
rts/cli/: Cargo.toml
rts/cli/src/: main.rs
rts/demo-shaders/: Cargo.toml
rts/shaders/: Cargo.toml
rts/shaders/src/: lib.rs
rts/src/: camera.rs  components.rs  demo_plugin.rs  demo_renderer_thread_pool.rs  dyn_object.rs  init.rs  input.rs  kin_object.rs  lib.rs  main.rs  terrain.rs  time.rs  ui.rs  unit.rs
rts/src/assets/: mod.rs
rts/src/assets/env_tile/: assets.rs  exporter.rs  importer.rs  mod.rs  plugin.rs
rts/src/assets/env_tileset/: assets.rs  exporter.rs  importer.rs  plugin.rs
rts/src/assets/font/: plugin.rs
rts/src/assets/gltf/: importer.rs  plugin.rs
rts/src/assets/pbr_material/: assets.rs  importer.rs  plugin.rs
rts/src/assets/terrain/: assets.rs  importer.rs  mod.rs  plugin.rs  terrain_config_importer.rs
rts/src/assets/tile/: assets.rs  exporter.rs  importer.rs  plugin.rs
rts/src/assets/tilesets/: assets.rs  exporter.rs  importer.rs  plugin.rs
rts/src/env/: env.rs  env_object.rs  mod.rs  perlin.rs  simulation.rs  terrain.rs  ui.rs
rts/src/features/: mod.rs
rts/src/features/debug3d/: debug3d_resource.rs  plugin.rs
rts/src/features/debug3d/jobs/: extract.rs  prepare.rs  write.rs
rts/src/features/dyn_mesh/: buffer_upload.rs  dyn_mesh.rs  dyn_mesh_manager.rs  mod.rs  plugin.rs  render_object.rs
rts/src/features/dyn_mesh/internal/: frame_packet.rs
rts/src/features/dyn_mesh/jobs/: extract.rs  prepare.rs  write.rs
rts/src/features/egui/: egui_context_resource.rs  egui_manager.rs  mod.rs  plugin.rs
rts/src/features/egui/internal/: egui_manager.rs  mod.rs
rts/src/features/egui/jobs/: extract.rs
rts/src/features/imgui/: imgui_manager.rs  mod.rs  plugin.rs
rts/src/features/imgui/internal/: mod.rs
rts/src/features/imgui/jobs/: extract.rs  prepare.rs  write.rs
rts/src/features/mesh/: dyn_mesh.rs  mod.rs  plugin.rs  render_object.rs  shadow_map_resource.rs
rts/src/features/mesh/internal/: frame_packet.rs
rts/src/features/mesh/jobs/: extract.rs  prepare.rs  write.rs
rts/src/features/text/: plugin.rs
rts/src/features/text/jobs/: extract.rs  prepare.rs  write.rs
rts/src/input/: input_winit.rs  mod.rs
rts/src/phases/: shadow_map_render_phase.rs
rts/src/render_graph_generator/: mod.rs
rts/src/scenes/: main_scene.rs  menu_scene.rs  mod.rs  shadows_scene.rs
rts/src/unit/: unit.rs
