[workspace]

members = [
    "rts",
    "rts/demo-shaders",
    "rts/cli",
]

exclude = [

]

[profile.dev.package."*"]
opt-level = 2

[profile.dev.build-override]
opt-level = 2

[patch.crates-io]
distill = { git = "https://github.com/amethyst/distill.git", rev = "852e48272ab3dad76c7490fce8df52461f94ebc0" }