[package]
name = "rts-lib"
version = "0.1.0"
authors = ["Călin Ardelean <mmn80cpu@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
sled = "0.34"
zerocopy = "0.4"
byteorder = "1.4"
wgpu = "0.7"
image = "0.23"
winit = "0.24"
cgmath = "0.18"
env_logger = "0.8"
log = "0.4"
rayon = "1.4"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
tobj = "2.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
rayon = "1.4"
shaderc = "0.7"