[package]
name = "rts"
version = "0.1.0"
authors = ["Călin Ardelean <mmn80cpu@gmail.com>"]
edition = "2018"

publish = false

[dependencies]
rafx = { path = "../../rafx/rafx", features = ["renderer", "basis-universal"] }
rafx-plugins = { path = "../../rafx/rafx-plugins", features = ["legion", "egui", "egui-winit"] }
rafx-plugins-shaders = { path = "../../rafx/rafx-plugins/rafx-plugins-shaders" }
shaders = { path = "demo-shaders", package="demo-shaders" }
distill = { version = "=0.0.3", features = ["serde_importers"] }
uuid = "0.8"
type-uuid = "0.1"
egui = { version = "0.12", features = ["default_fonts"] }
puffin_egui = { version = "0.3.0", optional = true }
legion = "0.4.0"
image = "0.23.12"

log = "0.4"
glam = { version = "0.13.1", features = [ "serde" ] }
arrayvec = "0.5"
crossbeam-channel = "0.5"
fnv = "1.0"
rand = "0.8"
pcg_rand = "0.13"
itertools = "0.8"
mopa = "0.2"
lazy_static = "1"
structopt = "0.3"
serde = "1"
serde_bytes = "0.11"
serde_json = "1.0"
bincode = "1.3.1"
ron = "0.6"
profiling = "1.0.1"
stats_alloc = { version = "0.1.8", optional = true }
bevy_tasks = "0.5.0"
raw-window-handle = "0.3.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.6"

winit = "0.24"
rayon = "1.4"
nalgebra = "0.27"
parry3d = "0.5"
building-blocks = "0.7"

[features]
default = [
    "profile-with-puffin",
    "rafx-vulkan",
    #"stats_alloc", # Cannot be enabled with "profile-with-tracy-memory". Will run renderer / game loop single-threaded.
    #"profile-with-optick",
    #"profile-with-tracy",
    #"profile-with-tracy-memory", # Cannot be enabled with "stats_alloc".
    #"profile-with-superluminal"
]
rafx-empty = ["rafx/rafx-empty"]
rafx-vulkan = ["rafx/rafx-vulkan"]
rafx-metal = ["rafx/rafx-metal"]
rafx-gles2 = ["rafx/rafx-gles2"]
rafx-gles3 = ["rafx/rafx-gles3"]
static-vulkan = ["rafx/static-vulkan"]
profile-with-puffin = [
    "profiling/profile-with-puffin",
    "puffin_egui"
]
profile-with-optick = [
    "profiling/profile-with-optick",
]
profile-with-superluminal = [
    "profiling/profile-with-superluminal",
]
profile-with-tracy = ["profiling/profile-with-tracy"]
profile-with-tracy-memory = [
    "profiling/profile-with-tracy",
    "profile-with-tracy"
]